Get hover over menu working

--- a/src/template.html
+++ b/src/template.html
@@ -5,5 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dynamic User Interface Interactions</title>
   </head>
-  <body></body>
+  <body>
+    <div class="menu">
+      Cats
+      <div class="submenu">Whiskey</div>
+    </div>
+  </body>
 </html>
