--- a/src/template.html
+++ b/src/template.html
@@ -10,5 +10,11 @@
       Cats
       <div class="submenu">Whiskey</div>
     </div>
+
+    <div class="menu">
+      Dogs
+      <div class="submenu">Zoey</div>
+      <div class="submenu">Pluto</div>
+    </div>
   </body>
 </html>
