--- a/src/template.html
+++ b/src/template.html
@@ -6,15 +6,17 @@
     <title>Dynamic User Interface Interactions</title>
   </head>
   <body>
-    <div class="menu">
-      Cats
-      <div class="submenu">Whiskey</div>
-    </div>
+    <div class="container">
+      <div class="menu">
+        Cats
+        <div class="submenu">Whiskey</div>
+      </div>
 
-    <div class="menu">
-      Dogs
-      <div class="submenu">Zoey</div>
-      <div class="submenu">Pluto</div>
+      <div class="menu">
+        Dogs
+        <div class="submenu">Zoey</div>
+        <div class="submenu">Pluto</div>
+      </div>
     </div>
   </body>
 </html>
