Use relative->absolute positioning for submenus

--- a/src/template.html
+++ b/src/template.html
@@ -9,14 +9,19 @@
     <div class="container">
       <div class="menu">
         Cats
-        <div class="submenu">Whiskey</div>
+        <div class="submenu">
+          <div class="submenu-item">Whiskey</div>
+        </div>
       </div>
 
       <div class="menu">
         Dogs
-        <div class="submenu">Zoey</div>
-        <div class="submenu">Pluto</div>
+        <div class="submenu">
+          <div class="submenu-item">Zoey</div>
+          <div class="submenu-item">Pluto</div>
+        </div>
       </div>
     </div>
+    <div>content</div>
   </body>
 </html>
