--- a/src/template.html
+++ b/src/template.html
@@ -8,14 +8,14 @@
   <body>
     <div class="container">
       <div class="menu">
-        Cats
+        Kittens
         <div class="submenu">
           <div class="submenu-item">Whiskey</div>
         </div>
       </div>
 
       <div class="menu">
-        Dogs
+        Puppies
         <div class="submenu">
           <div class="submenu-item">Zoey</div>
           <div class="submenu-item">Pluto</div>
