Refactor menu and submenus into their own container

--- a/src/template.html
+++ b/src/template.html
@@ -7,15 +7,13 @@
   </head>
   <body>
     <div class="container">
-      <div class="menu">
-        Kittens
-        <div class="submenu">
-          <div class="submenu-item">Whiskey</div>
-        </div>
-      </div>
+      <!-- <div class="menu">Kittens</div> -->
+      <!-- <div class="submenu">
+        <div class="submenu-item">Whiskey</div>
+      </div> -->
 
-      <div class="menu">
-        Puppies
+      <div class="menu-container">
+        <div class="menu">Puppies</div>
         <div class="submenu">
           <div class="submenu-item">Zoey</div>
           <div class="submenu-item">Pluto</div>
