Use `mouseenter` and `mouseleave` events
`mouseover` and `mouseout` were calling the parent div event handler
each time the mouse was moved in their surface area.

--- a/src/template.html
+++ b/src/template.html
@@ -7,16 +7,11 @@
   </head>
   <body>
     <div class="container">
-      <!-- <div class="menu">Kittens</div> -->
-      <!-- <div class="submenu">
-        <div class="submenu-item">Whiskey</div>
-      </div> -->
-
       <div class="menu-container">
-        <div class="menu">Puppies</div>
-        <div class="submenu">
-          <div class="submenu-item">Zoey</div>
-          <div class="submenu-item">Pluto</div>
+        <div class="root-menu layer-0">Puppies</div>
+        <div class="sub-menu layer-minus-1">
+          <div class="sub-menu-item">Zoey</div>
+          <div class="sub-menu-item">Pluto</div>
         </div>
       </div>
     </div>
