--- a/src/template.html
+++ b/src/template.html
@@ -27,6 +27,7 @@
         </div>
       </div>
     </div>
-    <div>content</div>
+    <div class="picture-frame"></div>
+    <div class="slide-show"></div>
   </body>
 </html>
