Create slide elements with background color styles

--- a/src/template.html
+++ b/src/template.html
@@ -27,7 +27,14 @@
         </div>
       </div>
     </div>
-    <div class="picture-frame"></div>
-    <div class="slide-show"></div>
+
+    <div class="picture-frame">
+      <div class="slide-show">
+        <div id="slide-0"></div>
+        <div id="slide-1"></div>
+        <div id="slide-2"></div>
+        <div id="slide-3"></div>
+      </div>
+    </div>
   </body>
 </html>
