--- a/src/template.html
+++ b/src/template.html
@@ -30,10 +30,10 @@
 
     <div class="picture-frame">
       <div class="slide-show">
-        <div id="slide-0"></div>
-        <div id="slide-1"></div>
-        <div id="slide-2"></div>
-        <div id="slide-3"></div>
+        <div class="slide" id="slide-0">0</div>
+        <div class="slide" id="slide-1">1</div>
+        <div class="slide" id="slide-2">2</div>
+        <div class="slide" id="slide-3">3</div>
       </div>
     </div>
   </body>
