--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,12 @@
     <title>Dynamic User Interface Interactions</title>
   </head>
   <body>
-    <div class="container">
+    <div id="outer">
+      <div class="inner" id="inner-1"></div>
+      <div class="inner" id="inner-2"></div>
+      <div class="inner" id="inner-3"></div>
+    </div>
+    <!-- <div class="container">
       <div class="menu-container">
         <div class="root-menu layer-0">Puppies</div>
         <div class="sub-menu layer-minus-1">
@@ -26,17 +31,19 @@
           <div class="sub-menu-item">Cat</div>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <div class="picture-frame-container">
+    <!-- <div class="picture-frame-container">
       <div class="picture-frame">
-        <div class="slide-show">
-          <div class="slide" id="slide-0">0</div>
-          <div class="slide" id="slide-1">1</div>
-          <div class="slide" id="slide-2">2</div>
-          <div class="slide" id="slide-3">3</div>
+        <div class="slide-show-container">
+          <div class="slide-show" id="slide-show-left">
+            <div class="slide" id="slide-0">0</div>
+            <div class="slide" id="slide-1">1</div>
+            <div class="slide" id="slide-2">2</div>
+            <div class="slide" id="slide-3">3</div>
+          </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
