Add arrow buttons

--- a/src/template.html
+++ b/src/template.html
@@ -28,15 +28,23 @@
       </div>
     </div> -->
 
-    <div class="picture-frame-container">
-      <div class="picture-frame">
-        <div id="slide-show">
-          <div class="slide" id="slide-0">
-            <img id="slide-0-image" />
+    <div class="carousel-container">
+      <div class="picture-frame-container">
+        <div class="picture-frame">
+          <div id="slide-show">
+            <div class="slide" id="slide-0">
+              <img id="slide-0-image" />
+            </div>
+            <div class="slide" id="slide-1">1</div>
+            <div class="slide" id="slide-2">2</div>
+            <div class="slide" id="slide-3">3</div>
           </div>
-          <div class="slide" id="slide-1">1</div>
-          <div class="slide" id="slide-2">2</div>
-          <div class="slide" id="slide-3">3</div>
+        </div>
+      </div>
+      <div id="controls">
+        <div id="buttons">
+          <button><-</button>
+          <button>-></button>
         </div>
       </div>
     </div>
