--- a/src/template.html
+++ b/src/template.html
@@ -43,8 +43,8 @@
       </div>
       <div id="controls">
         <div id="buttons">
-          <button><-</button>
-          <button>-></button>
+          <button id="previous-button"><-</button>
+          <button id="next-button">-></button>
         </div>
       </div>
     </div>
