Comment out transition logic - not needed for project specs

--- a/src/template.html
+++ b/src/template.html
@@ -43,8 +43,8 @@
       </div>
       <div id="controls">
         <div id="buttons">
-          <button id="previous-button"><-</button>
-          <button id="next-button">-></button>
+          <button class="control-button" id="previous-button"><-</button>
+          <button class="control-button" id="next-button">-></button>
         </div>
       </div>
     </div>
