--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,7 @@
     <title>Dynamic User Interface Interactions</title>
   </head>
   <body>
-    <!-- <div class="container">
+    <div class="container">
       <div class="menu-container">
         <div class="root-menu layer-0">Puppies</div>
         <div class="sub-menu layer-minus-1">
@@ -26,7 +26,7 @@
           <div class="sub-menu-item">Cat</div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <div class="carousel-container">
       <div class="picture-frame-container">
