--- a/src/template.html
+++ b/src/template.html
@@ -43,14 +43,14 @@
       </div>
       <div id="controls">
         <div id="buttons">
-          <button class="control-button" id="previous-button"><-</button>
+          <button class="control-button" id="previous-button">Prev</button>
           <div id="circles">
             <div class="jump-circle" id="jump-circle-0"></div>
             <div class="jump-circle" id="jump-circle-1"></div>
             <div class="jump-circle" id="jump-circle-2"></div>
             <div class="jump-circle" id="jump-circle-3"></div>
           </div>
-          <button class="control-button" id="next-button">-></button>
+          <button class="control-button" id="next-button">Next</button>
         </div>
       </div>
     </div>
