Fix controls flex layout and run build

--- a/src/template.html
+++ b/src/template.html
@@ -43,15 +43,13 @@
           </div>
         </div>
       </div>
-      <div id="controls">
-        <div id="buttons">
+      <div id="controls-container">
+        <div id="controls">
           <button class="control-button" id="previous-button">Prev</button>
-          <div id="circles">
-            <div class="jump-circle" id="jump-circle-0"></div>
-            <div class="jump-circle" id="jump-circle-1"></div>
-            <div class="jump-circle" id="jump-circle-2"></div>
-            <div class="jump-circle" id="jump-circle-3"></div>
-          </div>
+          <div class="jump-circle" id="jump-circle-0"></div>
+          <div class="jump-circle" id="jump-circle-1"></div>
+          <div class="jump-circle" id="jump-circle-2"></div>
+          <div class="jump-circle" id="jump-circle-3"></div>
           <button class="control-button" id="next-button">Next</button>
         </div>
       </div>
